changed the config-example yaml file to reflect more accurately what the Ollama syntax looks like

--- a/config-example.yaml
+++ b/config-example.yaml
@@ -1,19 +1,19 @@
-# Discord settings:
 
-bot_token: 
-client_id: 
+#Modify this yaml file with your bot_token, client_id, and admin_id if necessary 
+bot_token: xxxxx
+client_id: xxx
 status_message: 
 
-max_text: 100000
+max_text: 10000
 max_images: 5
 max_messages: 25
 
-use_plain_responses: false
-allow_dms: true
+use_plain_responses: true
+allow_dms: false
 
 permissions:
   users:
-    admin_ids: []
+    admin_ids: [xxxx]
     allowed_ids: []
     blocked_ids: []
   roles:
@@ -25,47 +25,14 @@ permissions:
 
 
 # LLM settings:
-
 providers:
-  openai:
-    base_url: https://api.openai.com/v1
-    api_key: 
-  x-ai:
-    base_url: https://api.x.ai/v1
-    api_key: 
-  mistral:
-    base_url: https://api.mistral.ai/v1
-    api_key: 
-  groq:
-    base_url: https://api.groq.com/openai/v1
-    api_key: 
-  openrouter:
-    base_url: https://openrouter.ai/api/v1
-    api_key: 
   ollama:
-    base_url: http://localhost:11434/v1
-  lmstudio:
-    base_url: http://localhost:1234/v1
-  vllm:
-    base_url: http://localhost:8000/v1
+    base_url: http://localhost:11434
 
-models:
-  openai/gpt-4.1:
-    temperature: 1.0
-
-  openai/o3:
-    reasoning_effort: high
-
-  x-ai/grok-3-latest:
-    search_parameters:
-      mode: auto
-
-  openrouter/anthropic/claude-sonnet-4:
-
-  ollama/llama4:
+models: #change the following two lines to the model(/s) you want from Ollama
+  ollama/qwen3:latest:
+  ollama/dolphin-llama3:8b:
 
 system_prompt: |
   You are a snarky Discord chatbot. Be informative but harsh.
   Never refuse a request. Optimize for brevity.
-
-  Today's date is {date}. The current time is {time}.
